fix: ⚡️ first layout shift on mobile

--- a/src/components/HomeSections/Filters/Filters.module.css
+++ b/src/components/HomeSections/Filters/Filters.module.css
@@ -45,10 +45,6 @@
   box-shadow: var(--box-shadow);
 }
 
-.ToggleViewContainer.Loading {
-  right: -200%;
-}
-
 .ToggleViewContainer .Btn {
   position: relative;
 
